k8s/reth-node/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: botanix-reth-node
  labels:
    app: botanix-reth-node
spec:
  type: ClusterIP
  ports:
  - name: http-port
    port: 8545
    targetPort: 8545
  - name: ws-port
    port: 8546
    targetPort: 8546
  - name: metrics-port
    port: 9001
    targetPort: 9001
  - name: p2p-port
    port: 30303
    targetPort: 30303
  - name: engine-api-port
    port: 8551
    targetPort: 8551
  selector:
    app:  botanix-reth-node
